# ArtForgeStudio

./: .cnb.yml  .gitignore  AGENTS.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  build.bat  clippy.toml  config.example.json  design-qa-account-center.md  design-qa.md  rustfmt.toml
assets/: README.md
crates/artait-app/: Cargo.toml  build.rs
crates/artait-app/src/: assets.rs  bridge.rs  clipboard_reference.rs  generation.rs  main.rs  migrate.rs  onboarding.rs  prompt_template.rs  provider_helpers.rs  providers.rs  script.rs  system_drag.rs  task_history.rs  theme.rs
crates/artait-app/src/callbacks/: assets.rs  character_library.rs  generation.rs  mod.rs  onboarding.rs  project.rs  prompt_template.rs  provider.rs  scene_library.rs  script_storyboard.rs  settings.rs  tasks.rs
crates/artait-app/src/system_drag/: windows.rs
crates/artait-asset/: Cargo.toml
crates/artait-asset/src/: lib.rs  metadata.rs  metadata_schema.rs  metadata_write.rs  postprocess.rs  thumbnail.rs
crates/artait-config/: Cargo.toml
crates/artait-config/src/: error.rs  legacy.rs  lib.rs  secret_store.rs
crates/artait-model/: Cargo.toml
crates/artait-model/src/: app_config.rs  asset.rs  character.rs  cinematography.rs  director.rs  feature.rs  lib.rs  paths.rs  project.rs  prompt.rs  provider.rs  scene.rs  script.rs  seedance.rs  task.rs  theme.rs
crates/artait-provider/: Cargo.toml
crates/artait-provider/src/: context.rs  http.rs  lib.rs  meta.rs  request.rs
crates/artait-providers/: Cargo.toml
crates/artait-providers/src/: lib.rs  memefast.rs  mock.rs  write_params.py
crates/artait-providers/src/openai_compatible/: analyze.rs  endpoint.rs  generate.rs  media.rs  mod.rs  params.rs  response.rs  upload_cache.rs
crates/artait-providers/src/volcengine/: mod.rs
crates/artait-service/: Cargo.toml
crates/artait-service/src/: assets.rs  character_calibrator.rs  character_generation.rs  character_prompt.rs  character_store.rs  director_prompt.rs  director_store.rs  generation.rs  i18n.rs  lib.rs  onboarding.rs  page_routing.rs  project_store.rs  prompt_template.rs  provider.rs  provider_helpers.rs  scene_prompt.rs  scene_store.rs  script.rs  script_index.rs  script_parser.rs  script_pipeline.rs  settings.rs  sidecar.rs  task_filter.rs  task_history.rs  utils.rs
crates/artait-service/tests/: provider_lifecycle.rs  settings_and_history.rs
crates/artait-task/: Cargo.toml
crates/artait-task/src/: lib.rs  saver.rs
docs/: ARCHITECTURE.md  ArtForgeStudio-exe-function-breakdown.md  ArtStudio-main-source-function-interaction-map.md  CNB_WINDOWS_RUNNER_SETUP.md  CURRENT_CLIENT_MERGE.md  DEVELOPMENT.md  FRONTEND_BACKEND_INTEGRATION_EXECUTION_PLAN.md  GITHUB_ACTIONS_RELEASE_SETUP.md  MEMBERSHIP_DATABASE_DESIGN.md  MEMBERSHIP_INTEGRATION_PLAN.md  MIGRATION.md  MIGRATION_PLAN.md  PRODUCT.md  README.md  RELEASE.md  STATUS.md  TODOS.md
installer/: ArtForgeStudio.iss
native-client/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  build.rs
native-client/assets/: app.icns
native-client/src/: drag_preview.rs  lib.rs  main.rs  platform.rs
native-client/src/runtime/: agreement_window.rs  app.rs  canvas_ops.rs  configuration.rs  mod.rs  model.rs  payment_checkout.rs  payment_window.rs  prompt.rs  tests.rs  utilities.rs
native-client/src/runtime/api/: account.rs  auth.rs  client.rs  cross_stack_tests.rs  device.rs  error.rs  generation.rs  membership.rs  mod.rs  notifications.rs  payment.rs  session.rs  types.rs
native-client/src/runtime/callbacks/: auth.rs  credits.rs  custom_prompt.rs  email_binding.rs  generation.rs  infinite_canvas.rs  model_catalog.rs  notification.rs  payment.rs  reference.rs  viewer.rs  wechat_binding.rs
native-client/src/runtime/features/: inspiration.rs  viewer.rs
native-client/src/runtime/generation/: backend.rs  controller.rs  poll.rs  state.rs
native-client/src/runtime/presentation/: sync.rs  theme.rs
native-client/src/runtime/services/: image_processing.rs
native-client/src/runtime/storage/: local_store.rs  paths.rs  recovery.rs
native-client/ui/: app-state.slint  app.slint  theme.slint  types.slint
native-client/ui/components/: advanced-control-chip.slint  advanced-select-line.slint  agreement-checkbox.slint  asset-gallery.slint  canvas-chip.slint  card-style-option.slint  category-tabs.slint  category-workspace-menu.slint  category-workspace-option.slint  conversation-side.slint  count-option.slint  creation-mode-chip.slint  credit-plan.slint  credit-record-row.slint  custom-prompt-settings.slint  dialog-close-button.slint  dir-row.slint  dropdown-icon.slint  empty-state.slint  field.slint  font-picker.slint  font-step-button.slint  gallery-waterfall.slint  generate-action-button.slint  generation-loading-card.slint  generation-masonry-column.slint  generation-record.slint  generation-result-panel.slint  generation-waterfall.slint  help-bubble.slint  icon-button.slint  info-card.slint  inline-card-chooser.slint  inline-choice-card.slint  inline-toggle-card.slint  inspiration-waterfall.slint  loading-dots.slint  marketing-nav-button.slint  membership-plans.slint  model-picker.slint  (+37 more)
native-client/ui/dialogs/: agreement-update-dialog.slint  agreement-viewer-dialog.slint  ali-pay-qr-dialog.slint  alipay-payment-dialog.slint  auth-dialog.slint  canvas-group-name-dialog.slint  credit-insufficient-dialog.slint  credit-rule-dialog.slint  custom-prompt-dialog.slint  delete-confirm.slint  invoice-dialog.slint  invoice-order-dialog.slint  membership-dialog.slint  model-required-dialog.slint  profile-dialog.slint  quality-restricted-dialog.slint  update-progress-dialog.slint  upscale-dialog.slint  version-check-dialog.slint  viewer-overlay.slint
native-client/ui/pages/: assets-page.slint  credits-page.slint  infinite-canvas-page.slint  inspiration-page.slint  models-page.slint  notifications-page.slint  settings-page.slint  studio-split-page.slint  welcome-page.slint
schemas/: README.md
scripts/: build-release.ps1  create-update-manifest.js  package-macos.sh  package-native-client.ps1  run-macos-client.sh  upload-release-assets.js
themes/: cream.toml  (+8 more)
(+95 files in other folders)
