[package]
name = "artforge-studio-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ArtForgeStudio"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.6.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "=1.16.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
slint-build = "=1.16.1"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
