[package]
name = "artforge-studio-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ArtForgeStudio"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.6.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fontdb = "0.23"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "=1.16.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }
windows-core = "=0.61.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "=1.16.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
