[package]
name = "artait-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "ArtAIT 配置加载、TOML 读写、密钥存储"

[dependencies]
artait-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
