[package]
name = "artait-providers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "ArtAIT 内置 provider 协议族实现"

[dependencies]
artait-model = { workspace = true }
artait-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
base64 = "0.22"
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
