[package]
name = "artait-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "ArtAIT 业务编排层（生成 / 脚本 / 提示词优化 / 任务历史）"

[dependencies]
artait-model = { workspace = true }
artait-config = { workspace = true }
artait-provider = { workspace = true }
artait-task = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "net"] }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
artait-asset = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
pulldown-cmark = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
bytes = "1"
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
artait-providers = { workspace = true }
artait-provider = { workspace = true }
artait-task = { workspace = true }
